NXT-3103: Code style / sonar (no functional changes)
(NXT-3103 persist local storage content)